-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b08
-
x86
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8045300 | 8u25 | Vladimir Kozlov | P2 | Resolved | Fixed | b01 |
| JDK-8038351 | 8u20 | Vladimir Kozlov | P2 | Closed | Fixed | b08 |
| JDK-8053414 | emb-8u26 | Vladimir Kozlov | P2 | Resolved | Fixed | b17 |
Looking over nightly I saw some crushes in ciEnv::register_method(). They may be not related but I found a problem there with RTM changes.
nmethod::new_nmethod() may return NULL as result next instruction may cause crash:
#if INCLUDE_RTM_OPT
nm->set_rtm_state(rtm_state);
#endif
nmethod::new_nmethod() may return NULL as result next instruction may cause crash:
#if INCLUDE_RTM_OPT
nm->set_rtm_state(rtm_state);
#endif
- backported by
-
JDK-8045300 nm->set_rtm_state() should be called after (nm != NULL) check
-
- Resolved
-
-
JDK-8053414 nm->set_rtm_state() should be called after (nm != NULL) check
-
- Resolved
-
-
JDK-8038351 nm->set_rtm_state() should be called after (nm != NULL) check
-
- Closed
-
- relates to
-
JDK-8031320 Use Intel RTM instructions for locks
-
- Closed
-