8038286: nm->set_rtm_state() should be called after (nm != NULL) check

Move set_rtm_state() call after (nm != NULL) check

Reviewed-by: iveresov, twisti